--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </ul>
                     </div>
                     <div class="test-card-footer">
-                        <button class="btn btn-primary open-lead-modal" data-pdf-link="YOUR_GOOGLE_DRIVE_PDF_LINK_FOUNDATION" data-en="Start Free Test" data-hi="फ्री टेस्ट शुरू करें">Start Free Test</button>
+                        <button class="btn btn-primary open-lead-modal" data-pdf-link="https://drive.google.com/file/d/1ztptHMUr3KXA_vq8It1bGsDQrc8d5rNG/view?usp=sharing" data-en="Start Free Test" data-hi="फ्री टेस्ट शुरू करें">Start Free Test</button>
                     </div>
                 </div>
                 <div class="test-card">
@@ -115,7 +115,7 @@
                         </ul>
                     </div>
                     <div class="test-card-footer">
-                        <button class="btn btn-primary open-lead-modal" data-pdf-link="YOUR_GOOGLE_DRIVE_PDF_LINK_INTERMEDIATE" data-en="Start Free Test" data-hi="फ्री टेस्ट शुरू करें">Start Free Test</button>
+                        <button class="btn btn-primary open-lead-modal" data-pdf-link="https://drive.google.com/file/d/1ztptHMUr3KXA_vq8It1bGsDQrc8d5rNG/view?usp=sharing" data-en="Start Free Test" data-hi="फ्री टेस्ट शुरू करें">Start Free Test</button>
                     </div>
                 </div>
                 <div class="test-card">
@@ -129,7 +129,7 @@
                         </ul>
                     </div>
                     <div class="test-card-footer">
-                        <button class="btn btn-primary open-lead-modal" data-pdf-link="YOUR_GOOGLE_DRIVE_PDF_LINK_FINAL" data-en="Start Free Test" data-hi="फ्री टेस्ट शुरू करें">Start Free Test</button>
+                        <button class="btn btn-primary open-lead-modal" data-pdf-link="https://drive.google.com/file/d/1ztptHMUr3KXA_vq8It1bGsDQrc8d5rNG/view?usp=sharing" data-en="Start Free Test" data-hi="फ्री टेस्ट शुरू करें">Start Free Test</button>
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                                 <li data-en="1 Subject-wise Paper" data-hi="1 विषयवार पेपर">1 Subject-wise Paper</li>
                                 <li data-en="Downloadable PDF" data-hi="डाउनलोड करने योग्य PDF">Downloadable PDF</li>
                             </ul>
-                            <button class="btn btn-outline open-lead-modal" data-pdf-link="YOUR_GOOGLE_DRIVE_PDF_LINK_FREE_PACK" data-en="Sign Up for Free" data-hi="फ्री साइन अप">Sign Up for Free</button>
+                            <button class="btn btn-outline open-lead-modal" data-pdf-link="https://drive.google.com/file/d/1ztptHMUr3KXA_vq8It1bGsDQrc8d5rNG/view?usp=sharing" data-en="Sign Up for Free" data-hi="फ्री साइन अप">Sign Up for Free</button>
                         </div>
                         <div class="pricing-card highlight">
                             <div class="badge" data-en="Most Popular" data-hi="सबसे लोकप्रिय">Most Popular</div>
