--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="images/logo.png" alt="CAExam Logo - Best CA Test Series" class="logo">
+                <img src="logo.png" alt="CAExam Logo - Best CA Test Series" class="logo">
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
